--- a/project/vite-project/package.json
+++ b/project/vite-project/package.json
@@ -18,7 +18,10 @@
     "crypto-js": "^4.2.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.2",
+    "ra-data-simple-rest": "^5.4.0",
     "react": "^18.3.1",
+    "react-admin": "^5.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "serve-static": "^1.16.2"
