--- a/project/vite-project/package.json
+++ b/project/vite-project/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^4.21.1",
+    "framer-motion": "^11.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "ra-data-simple-rest": "^5.4.0",
@@ -31,11 +32,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.11"
   }
 }
